# toxic-comment-collection

./: .gitignore  LICENSE  README.md  api_config.json  combination_experiments.ipynb  config.json  main.py  requirements.txt  setup.cfg  sql_dump_to_csv.py  statisitics_generator.py  statistics_generator.py
datasets/: OLID.py  __init__.py  _placeholder.py  abusive_lang_aljazeera_ar.py  abusive_lang_twitter_ar.py  ahsd_en.py  albadi2018.py  alfina2017.py  basile2019.py  bretschneider2016lol.py  bretschneider2016wow.py  bretschneider2017.py  chung2019.py  coltekin2019.py  conan.py  dataset.py  davidson2017.py  elsherief2018.py  fortuna2019.py  founta2018.py  fox_news_user_comments_en.py  gao2018.py  gibert2018.py  hate_speech_mlma.py  helpers.py  ibrohim2018.py  ibrohim2019.py  intervene_online_hs_en.py  jha2017.py  kulkarni2021.py  kumar2018.py  lhsab.py  mandl2019en.py  mandl2019ger.py  mandl2019hind.py  mathur2018.py  mubarak2017aljazeera.py  mubarak2017twitter.py  mulki2019.py  novak2021.py  (+14 more)
src/toxic_comment_collection/: __init__.py  config.json  main_execution.py  statistics_generator.py
src/toxic_comment_collection/datasets/: __init__.py  albadi2018.py  alfina2017.py  basile2019.py  bretschneider2016lol.py  bretschneider2016wow.py  bretschneider2017.py  chung2019.py  coltekin2019.py  dataset.py  davidson2017.py  elsherief2018.py  fortuna2019.py  founta2018.py  gao2018.py  gibert2018.py  helpers.py  ibrohim2018.py  ibrohim2019.py  jha2017.py  kulkarni2021.py  kumar2018.py  mandl2019en.py  mandl2019ger.py  mandl2019hind.py  mathur2018.py  mubarak2017aljazeera.py  (+15 more)
