[metadata]
name = toxic-comment-collection
version = 1.1
author = Julian Risch
author_email = julian.risch@hpi.de
description = This package provides access to toxic comment classification datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/julian-risch/toxic-comment-collection
project_urls =
    Bug Tracker = https://github.com/julian-risch/toxic-comment-collection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas ==1.2.1
    openpyxl ==3.0.6
    twarc ==1.12.1
include_package_data = True

[options.package_data]
* = *.json

[options.packages.find]
where = src